--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,205 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+html {
+  font-size: 10px;
+}
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  height: 4rem;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 5rem;
+  font-family: "Titillium Web", sans-serif;
+}
 
+nav {
+  display: flex;
+  /* flex-basis: 70%; */
+  width: 100%;
+  justify-content: space-between;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  color: gray;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+.logo {
+  margin-left: 3rem;
+}
+
+.logo img {
+  width: 150px;
+}
+
+.container {
+  display: flex;
+  width: 70%;
+  margin: 0 auto;
+  flex-flow: row wrap;
+  font-size: 1.6rem;
+}
+
+.item-main-text {
+  flex-basis: 50%;
+  font-family: "Bangers", sans-serif;
+  text-align: center;
+}
+
+.item-main-text p {
+  align-items: center;
+  justify-content: center;
+  font-family: "Bangers", sans-serif;
+  text-align: center;
+  font-size: 5rem;
+}
+
+.get-started-button {
+  font-family: "Titillium Web", sans-serif;
+  text-align: center;
+  width: 15rem;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.item1 {
+  height: 100%;
+  flex-basis: 50%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  margin-top: 5rem;
+}
+
+.item1 img {
+  width: 25%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.line-break {
+  width: 100%;
+  border-top: 1px solid black;
+  margin-bottom: 2rem;
+  margin-top: 5rem;
+}
+
+.item2 {
+  flex-basis: 50%;
+}
+
+.item3 {
+  flex-basis: 50%;
+}
+
+.item-mid-pic {
+  flex-basis: 100%;
+}
+
+.item-mid-pic img {
+  width: 100%;
+}
+
+.item4 {
+  flex-basis: 30%;
+  margin: 1%;
+}
+
+.item5 {
+  flex-basis: 30%;
+  margin: 1%;
+}
+
+.item6 {
+  flex-basis: 30%;
+  margin: 1%;
+}
+
+h4 {
+  font-family: "Bangers", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 300;
+  letter-spacing: 0.1rem;
+}
+
+h6 {
+  text-align: center;
+  font-family: "Titillium Web", sans-serif;
+  color: gray;
+  font-size: 1.5rem;
+}
+
+p {
+  font-family: "Titillium Web";
+}
+
+footer {
+  flex-basis: 100%;
+}
+
+address {
+  font-family: "Titillium Web", sans-serif;
+}
+
+@media (max-width: 800px) {
+  .container {
+    width: 98%;
+  }
+
+  .header-container {
+    flex-flow: row wrap-reverse;
+    justify-content: center;
+    margin-top: 5rem;
+  }
+
+  nav {
+    margin-top: 2rem;
+  }
+
+  .item1 {
+    display: none;
+  }
+
+  .item-main-text {
+    flex-basis: 100%;
+  }
+
+  .line-break {
+    border-top: 2px solid black;
+  }
+}
+
+@media (max-width: 500px) {
+  nav {
+    flex-flow: column;
+    text-align: center;
+  }
+
+  .header-container {
+    margin-top: 33rem;
+    margin-bottom: 0;
+  }
+
+  a {
+    border-top: 1px solid gray;
+    color: rgb(172, 179, 185);
+    line-height: 5rem;
+  }
+
+  .item-main-text {
+    border-top: 1px solid gray;
+  }
+
+  .container {
+    flex-flow: column wrap;
+  }
+}
